# docs/swagger.json
@@ -501,7 +501,7 @@
                 }
             },
             "delete": {
-                "description": "Delete a user by their UUID",
+                "description": "Archive a user by their UUID",
                 "consumes": [
                     "application/json"
                 ],
@@ -511,7 +511,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Delete a user",
+                "summary": "Archive a user",
                 "parameters": [
                     {
                         "type": "string",
@@ -523,7 +523,46 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "User deleted successfully",
+                        "description": "User archive successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{uuid}/restore": {
+            "patch": {
+                "description": "Restore a deleted user by their UUID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Restore a deleted user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User restored successfully",
                         "schema": {
                             "type": "string"
                         }
@@ -609,6 +648,9 @@
                 },
                 "firstname": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "lastname": {
                     "type": "string"
